// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> renders properly with data 1`] = `
<div
  class="StyledCard__Row-hps8jg-3 hjgqoB"
>
  <div
    class="StyledCard__Container-hps8jg-1 drgibA"
  >
    <h1
      class="StyledCard__Title-hps8jg-0 yRFff"
    >
      Documentaries
    </h1>
    <div
      class="StyledCard__Entities-hps8jg-12 kyUuO"
    >
      <div
        class="StyledCard__Item-hps8jg-13 bXzEiB"
      >
        <img
          class="StyledCard__Poster-hps8jg-14 drMxSq"
          src="/assets/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="StyledCard__Meta-hps8jg-11 nDVlq"
        >
          <p
            class="StyledCard__SubTitle-hps8jg-2 fYFwXG"
          >
            Tiger King
          </p>
          <p
            class="StyledCard__Text-hps8jg-4 eSKAHC"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledCard__Container-hps8jg-1 drgibA"
  >
    <h1
      class="StyledCard__Title-hps8jg-0 yRFff"
    >
      Feel Good
    </h1>
    <div
      class="StyledCard__Entities-hps8jg-12 kyUuO"
    >
      <div
        class="StyledCard__Item-hps8jg-13 bXzEiB"
      >
        <img
          class="StyledCard__Poster-hps8jg-14 drMxSq"
          src="/assets/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="StyledCard__Meta-hps8jg-11 nDVlq"
        >
          <p
            class="StyledCard__SubTitle-hps8jg-2 fYFwXG"
          >
            Juno
          </p>
          <p
            class="StyledCard__Text-hps8jg-4 eSKAHC"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> renders properly with data and toggle feature 1`] = `
<div
  class="StyledCard__Row-hps8jg-3 hjgqoB"
>
  <div
    class="StyledCard__Container-hps8jg-1 drgibA"
  >
    <h1
      class="StyledCard__Title-hps8jg-0 yRFff"
    >
      Documentaries
    </h1>
    <div
      class="StyledCard__Entities-hps8jg-12 kyUuO"
    >
      <div
        class="StyledCard__Item-hps8jg-13 bXzEiB"
        data-testid="tiger-king-feature"
      >
        <img
          class="StyledCard__Poster-hps8jg-14 drMxSq"
          src="/assets/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="StyledCard__Meta-hps8jg-11 nDVlq"
        >
          <p
            class="StyledCard__SubTitle-hps8jg-2 fYFwXG"
          >
            Tiger King
          </p>
          <p
            class="StyledCard__Text-hps8jg-4 eSKAHC"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledCard__Container-hps8jg-1 drgibA"
  >
    <h1
      class="StyledCard__Title-hps8jg-0 yRFff"
    >
      Feel Good
    </h1>
    <div
      class="StyledCard__Entities-hps8jg-12 kyUuO"
    >
      <div
        class="StyledCard__Item-hps8jg-13 bXzEiB"
        data-testid="juno-feature"
      >
        <img
          class="StyledCard__Poster-hps8jg-14 drMxSq"
          src="/assets/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="StyledCard__Meta-hps8jg-11 nDVlq"
        >
          <p
            class="StyledCard__SubTitle-hps8jg-2 fYFwXG"
          >
            Juno
          </p>
          <p
            class="StyledCard__Text-hps8jg-4 eSKAHC"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
